Swapped the sliders for button-toggles

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -13,7 +13,7 @@
 
     <img class="flex-item" fxShow="false" fxShow.xs md-card-avatar src="assets/images/empty-portrait.png">
 
-    <div class="headerSettings flex-item">
+    <div class="headerSettings flex-container flex-item">
       <button md-icon-button [md-menu-trigger-for]="settings">
         <md-icon>more_vert</md-icon>
       </button>
@@ -22,22 +22,22 @@
           <md-icon class="flex-item">account_box</md-icon>
           <span class="flex-item" fxFlex="100%">{{ 'MENU.OPEN' | translate }}</span>
         </button>
-        <button md-menu-item (click)="onThemeChange()" class="flex-container">
-          <md-icon class="flex-item">
+        <md-button-toggle (change)="onThemeChange()" [checked]="isDarkTheme">
+          <md-icon>
             insert_photo
           </md-icon>
-          <span class="flex-item" fxFlex="100%">
+          <span>
             {{ 'MENU.DARK_THEME' | translate }}
           </span>
-          <md-slide-toggle [(ngModel)]="isDarkTheme" class="flex-item">
-          </md-slide-toggle>
-        </button>
-        <button md-menu-item (click)="onDutchChange()" class="flex-container">
-          <md-icon class="flex-item">g_translate</md-icon>
-          <span class="flex-item" fxFlex="100%">{{ 'MENU.LANGUAGE' | translate }}</span>
-          <md-slide-toggle [(ngModel)]="isDutch" class="flex-item">
-          </md-slide-toggle>
-        </button>
+        </md-button-toggle>
+        <md-button-toggle (change)="onLanguageChange()" [checked]="isDutch">
+          <md-icon>
+            g_translate
+          </md-icon>
+          <span>
+            {{ 'MENU.LANGUAGE' | translate }}
+          </span>
+        </md-button-toggle>
         <button md-menu-item (click)="onOpenDeleteSettingsDialog()" class="flex-container">
           <md-icon class="flex-item">delete</md-icon>
           <span class="flex-item" fxFlex="100%">{{ 'MENU.CLEAR_SETTINGS' | translate }}</span>
