Description component is now invisble in xs modus

--- a/src/app/components/sheet-component/sheet-header-component/sheet-header.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/sheet-header.component.html
@@ -24,7 +24,8 @@
                                   fxLayout="column"
                                   fxLayoutAlign="start stretch"
                                   fxFlex
-                                  fxFlex.xs="10"
+                                  fxHide="false"
+                                  fxHide.xs
                                   ></gurpsy-description-component>
   </div>
   <gurpsy-points-component class="pointsWrapper flex-item"
