Added total points to the points header

--- a/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
@@ -1,6 +1,6 @@
 <div class="sheetComponent points">
   <div class="sheetComponentHeader">
-    {{ 'SHEET.POINTS.POINTS' | translate }}
+    <span *ngIf="sheet.points.total">{{sheet.points.total + ' '}}</span>{{ 'SHEET.POINTS.POINTS' | translate }}
   </div>
   <div class="sheetComponentBody">
     <div class="flex-container"
