--- a/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.scss
+++ b/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.scss
@@ -2,8 +2,18 @@
 
 md-dialog-content button {
   width: 100%;
-  height: 60px;
-  padding: 0;
+  padding: 6px 0px 0px 0px;
+
+  .avatar {
+    img {
+      height: 40px;
+    }
+
+  }
+
+  .sheetRow {
+    height: 40px;
+  }
 
   .sheetInfo {
     .sheetName {
