--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -6,7 +6,7 @@
       </button>
     </div>
     <div class="avatar">
-      <img md-card-avatar src="assets/images/empty-portrait.png">
+      <img src="assets/images/empty-portrait.png">
     </div>
   </div>
   <div class="sideNavigationContent">
