--- a/src/app/components/side-navigation/side-navigation.component.scss
+++ b/src/app/components/side-navigation/side-navigation.component.scss
@@ -11,7 +11,7 @@
       top: 32px;
 
       img {
-        border: 1px solid md-color($primary);
+        border: 1px solid mat-color($primary);
         width: 48px;
         height: 48px;
       }
