--- a/src/gurpsy-material-theme.scss
+++ b/src/gurpsy-material-theme.scss
@@ -1,21 +1,21 @@
 @import '~@angular/material/core/theming/all-theme';
 
-@include md-core();
+@include mat-core();
 
-$primary: md-palette($md-green, 900);
-$accent:  md-palette($md-green, 400);
-$warn: md-palette($md-red, A700);
+$primary: mat-palette($mat-green, 900);
+$accent:  mat-palette($mat-green, 400);
+$warn: mat-palette($mat-red, A700);
 
-$theme: md-light-theme($primary, $accent, $warn);
+$theme: mat-light-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
 
 .gurpsy-dark {
-  $dark-primary: md-palette($md-purple, 900);
-  $dark-accent:  md-palette($md-purple, 500);
-  $dark-warn:    md-palette($md-deep-orange);
+  $dark-primary: mat-palette($mat-purple, 900);
+  $dark-accent:  mat-palette($mat-purple, 500);
+  $dark-warn:    mat-palette($mat-deep-orange);
 
-  $dark-theme: md-dark-theme($dark-primary, $dark-accent, $dark-warn);
+  $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
   @include angular-material-theme($dark-theme);
 }
