--- a/src/gurpsy-styles.scss
+++ b/src/gurpsy-styles.scss
@@ -18,14 +18,14 @@ md-sidenav {
   }
 }
 
-md-sidenav-layout {
+md-sidenav-container {
   height: 100%;
 
   .sideNavigationHeader {
     height: 90px;
     margin-bottom: 20px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
-    color: md-color($primary, default-contrast);
+    color: mat-color($primary, default-contrast);
     background: url(assets/images/day.png);
   }
 
@@ -37,7 +37,7 @@ md-sidenav-layout {
   }
 }
 
-md-sidenav-layout.gurpsy-dark {
+md-sidenav-container.gurpsy-dark {
   background: black !important;
 
   .sideNavigationHeader {
