--- a/src/app/components/sheet-component/sheet.component.scss
+++ b/src/app/components/sheet-component/sheet.component.scss
@@ -9,8 +9,8 @@
 }
 
 .sheetComponentHeader {
-  background: md-color($accent);
-  color: md-color($accent, default-contrast);
+  background: mat-color($accent);
+  color: mat-color($accent, default-contrast);
   text-align: center;
   font-size: small;
   white-space: nowrap;
