--- a/src/app/components/dialog-component/delete-settings-dialog/delete-settings-dialog.component.html
+++ b/src/app/components/dialog-component/delete-settings-dialog/delete-settings-dialog.component.html
@@ -18,7 +18,7 @@
   </div>
 </md-dialog-content>
 
-<md-dialog-actions>
+<md-dialog-actions align="end">
   <button md-button color="primary" (click)="onDeleteSettings()"> {{'DIALOG.DELETE_DATA.DELETE'| translate}}</button>
   <button md-button md-dialog-close> {{'DIALOG.CANCEL'| translate}}</button>
 </md-dialog-actions>
