--- a/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.html
+++ b/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.html
@@ -16,8 +16,8 @@
           <div class="sheetInfo flex-item flex-container"
                fxLayout="column"
                fxLayoutWrap="nowrap">
-            <span class="sheetName flex-item">{{sheet.name}}</span>
-            <span class="sheetPoints flex-item">137 points</span>
+            <span class="sheetName flex-item">{{sheet.metaData.identity.name}}</span>
+            <span class="sheetPoints flex-item">{{sheet.points.total}}</span>
           </div>
         </div>
       </button>
