--- a/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
@@ -3,6 +3,6 @@
     {{ 'SHEET.DESCRIPTION.DESCRIPTION' | translate }}
   </div>
   <div class="sheetComponentBody">
-    {{sheet.description}}
+    {{sheet.metaData.description.age}}
   </div>
 </div>
