--- a/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
@@ -16,9 +16,9 @@
     <div class="value flex-container flex-item"
          fxLayout="column"
          fxLayoutWrap="nowrap">
-      <span class="flex-item">{{sheet.identity.name}}</span>
-      <span class="flex-item">{{sheet.identity.title}}</span>
-      <span class="flex-item">{{sheet.identity.religion}}</span>
+      <span class="flex-item">{{sheet.metaData.identity.name}}</span>
+      <span class="flex-item">{{sheet.metaData.identity.title}}</span>
+      <span class="flex-item">{{sheet.metaData.identity.religion}}</span>
     </div>
   </div>
 </div>
