--- a/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
@@ -16,9 +16,9 @@
     <div class="value flex-container flex-item"
          fxLayout="column"
          fxLayoutWrap="nowrap">
-      <span class="flex-item">{{sheet.playerInformation.player}}</span>
-      <span class="flex-item">{{sheet.playerInformation.campaign}}</span>
-      <span class="flex-item">{{sheet.playerInformation.creationDate}}</span>
+      <span class="flex-item">{{sheet.metaData.playerInformation.player}}</span>
+      <span class="flex-item">{{sheet.metaData.playerInformation.campaign}}</span>
+      <span class="flex-item">{{sheet.metaData.playerInformation.creationDate}}</span>
     </div>
   </div>
 </div>
