--- a/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
@@ -9,7 +9,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.RACE' | translate }}</label>
-      <span class="flex-item">{{sheet.points.race}}</span>
+      <span class="flex-item">0</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -17,7 +17,7 @@
          fxLayoutAlign="space-between stretch"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.ATTRIBUTES' | translate }}</label>
-      <span class="flex-item">{{sheet.points.attributes}}</span>
+      <span class="flex-item">0</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -41,7 +41,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.QUIRKS' | translate }}</label>
-      <span class="flex-item">{{sheet.points.quirks}}</span>
+      <span class="flex-item">0</span>
     </div>
     <div class="flex-container"
          fxLayout="row"
@@ -65,7 +65,7 @@
          fxLayoutGap="10px"
          fxLayoutWrap="nowrap">
       <label class="flex-item">{{ 'SHEET.POINTS.EARNED' | translate }}</label>
-      <span class="flex-item">{{sheet.points.earned}}</span>
+      <span class="flex-item">{{sheet.points.unspent}}</span>
     </div>
   </div>
 </div>
