--- a/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.scss
+++ b/src/app/components/dialog-component/open-sheet-dialog/open-sheet-dialog.component.scss
@@ -8,7 +8,6 @@ md-dialog-content button {
     img {
       height: 40px;
     }
-
   }
 
   .sheetRow {
@@ -16,13 +15,12 @@ md-dialog-content button {
   }
 
   .sheetInfo {
-    .sheetName {
-      font-weight: normal;
-      line-height: normal;
-    }
+
+    padding-left: 8px;
+
     .sheetPoints {
-      font-weight: normal;
-      line-height: normal;
+      font-size: small;
+      color: grey;
     }
   }
 }
