resource bundle cleanup

--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -14,37 +14,37 @@
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">accessibility</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SHEET.SUBJECT.ATTRIBUTES'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.ATTRIBUTES'| translate}}</span>
     </button>
     <button md-button class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">hearing</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SHEET.SUBJECT.DIS_ADVANTAGES'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.DIS_ADVANTAGES'| translate}}</span>
     </button>
     <button md-button class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">school</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SHEET.SUBJECT.SKILLS'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.SKILLS'| translate}}</span>
     </button>
     <button md-button class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">flash_on</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SHEET.SUBJECT.MAGIC'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.MAGIC'| translate}}</span>
     </button>
     <button md-button class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">card_travel</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SHEET.SUBJECT.EQUIPMENT'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.EQUIPMENT'| translate}}</span>
     </button>
     <button md-button class="sideNavigationContentLine flex-container"
             fxLayoutAlign="space-between stretch"
             fxLayoutWrap="nowrap">
       <md-icon class="flex-item">mode_edit</md-icon>
-      <span class="flex-item" fxFlex="100%">{{'SHEET.SUBJECT.NOTES'| translate}}</span>
+      <span class="flex-item" fxFlex="100%">{{'SUBJECT.NOTES'| translate}}</span>
     </button>
   </div>
 </div>
