--- a/src/app/components/sheet-component/sheet-body-component/sheet-body.component.html
+++ b/src/app/components/sheet-component/sheet-body-component/sheet-body.component.html
@@ -1,1 +1,5 @@
 <gurpsy-notes-component *ngIf="bodyContent === sheetBodyComponents.NOTES"></gurpsy-notes-component>
+<gurpsy-skills-component *ngIf="bodyContent === sheetBodyComponents.SKILLS"></gurpsy-skills-component>
+<gurpsy-advantages-component *ngIf="bodyContent === sheetBodyComponents.ADVANTAGES"></gurpsy-advantages-component>
+<gurpsy-equipment-component *ngIf="bodyContent === sheetBodyComponents.EQUIPMENT"></gurpsy-equipment-component>
+<gurpsy-magic-component *ngIf="bodyContent === sheetBodyComponents.MAGIC"></gurpsy-magic-component>
